--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -46,6 +46,24 @@
                         android:textSize="25sp"
                         android:textColor="#000000"
                         android:layout_marginStart="25dp"/>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="1" />
+
+                    <!-- Bell Icon -->
+                    <ImageView
+                        android:id="@+id/notificationBell"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="8dp"
+                        android:clickable="true"
+                        android:contentDescription="Notifications"
+                        android:focusable="true"
+                        android:src="@drawable/baseline_notifications_24" />
+
                 </LinearLayout>
 
 
@@ -180,6 +198,8 @@
                                 android:textSize="16sp"
                                 android:padding="8dp"
                                 android:textColor="#757575"/>
+
+
                         </LinearLayout>
 
                         <!-- Bar Chart -->
